--- a/ca1r.html
+++ b/ca1r.html
@@ -1,294 +1,208 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Car Rush 💰</title>
+<title>Velocity Drive: Neon Rush</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body {
+html, body {
   margin: 0;
-  background: #111;
-  font-family: Arial, sans-serif;
+  background: radial-gradient(#0a0a14, #000);
+  font-family: system-ui, Arial;
   color: white;
   overflow: hidden;
 }
 
-#topUI {
-  text-align: center;
-  padding: 6px;
-  background: #000;
-  font-size: 14px;
+#ui {
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 18px;
+  background: rgba(0,0,0,.6);
+  padding: 10px 18px;
+  border-radius: 14px;
+  backdrop-filter: blur(6px);
+  z-index: 10;
 }
 
-#game {
-  position: relative;
-  width: 320px;
-  height: 520px;
-  margin: auto;
-  background: #444;
-  border: 4px solid gold;
-  overflow: hidden;
+#ui span {
+  font-weight: 600;
 }
 
-#player {
-  position: absolute;
-  width: 50px;
-  height: 80px;
-  bottom: 20px;
-  left: 135px;
-  background: cyan;
-  border-radius: 6px;
-}
-
-.animated {
-  animation: pulse 1s infinite;
-}
-
-@keyframes pulse {
-  0% { filter: brightness(1); }
-  50% { filter: brightness(1.6); }
-  100% { filter: brightness(1); }
-}
-
-.enemy {
-  position: absolute;
-  width: 50px;
-  height: 80px;
-  background: red;
-  border-radius: 6px;
-}
-
-.obstacle {
-  position: absolute;
-  width: 60px;
-  height: 20px;
-  background: orange;
+#garage {
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 420px;
+  background: #05050a;
+  border-top: 3px solid #00f6ff;
+  padding: 12px;
+  display: none;
+  z-index: 10;
 }
 
 button {
-  margin: 4px;
-  padding: 8px;
-  border: none;
-  border-radius: 6px;
-  background: gold;
-  font-weight: bold;
-}
-
-#controls {
-  display: flex;
-  justify-content: center;
-}
-
-.panel {
-  display: none;
-  background: #222;
+  width: 100%;
+  margin-top: 8px;
   padding: 10px;
-  border-top: 3px solid gold;
+  border-radius: 10px;
+  border: none;
+  background: linear-gradient(135deg, #00f6ff, #0066ff);
+  color: black;
+  font-weight: 800;
+  cursor: pointer;
 }
-
-#ad {
-  display: none;
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,.9);
-  text-align: center;
-  padding-top: 150px;
-  z-index: 10;
+canvas {
+  display: block;
+  margin: auto;
 }
 </style>
 </head>
 
 <body>
 
-<div id="topUI">
-💰 <span id="cash">0</span>
-💎 <span id="gems">0</span>
-⭐ <span id="score">0</span>
-♻️ Rebirths: <span id="rebirths">0</span>
-<br>
-<button onclick="openShop()">Shop</button>
-<button onclick="openLoot()">Loot Box</button>
-<button onclick="rebirth()">Rebirth</button>
-<button onclick="toggleMode()">Mode</button>
-<button onclick="fullscreen()">Fullscreen</button>
+<div id="ui">
+  <span>💰 $<span id="money">0</span></span>
+  <span>⚡ <span id="speed">0</span></span>
+  <span>🏆 Best: <span id="best">0</span></span>
 </div>
 
-<div id="game">
-  <div id="player"></div>
-</div>
+<canvas id="game" width="800" height="600"></canvas>
 
-<div id="controls">
-  <button onclick="left()">⬅️</button>
-  <button onclick="boost()">🚀</button>
-  <button onclick="right()">➡️</button>
-</div>
-
-<div id="shop" class="panel">
-<h3>🎨 Skins</h3>
-<button onclick="buySkin('cyan',0)">Free</button>
-<button onclick="buySkin('lime',100)">Green</button>
-<button onclick="buySkin('gold',300)">Gold</button>
-<button onclick="buyAnimated()">Animated (💎5)</button>
-</div>
-
-<div id="loot" class="panel">
-<h3>🔥 Loot Box</h3>
-<button onclick="openBox()">Open (💎3)</button>
-</div>
-
-<div id="ad">
-<h2>ADVERTISEMENT 💀</h2>
-<p>BUY ROBUX 💸</p>
-<button onclick="closeAd()">Continue</button>
+<div id="garage">
+  <h3>🚗 GARAGE</h3>
+  <button onclick="upgrade('speed',500)">Upgrade Max Speed ($500)</button>
+  <button onclick="upgrade('handling',400)">Upgrade Handling ($400)</button>
+  <button onclick="upgrade('boost',600)">Upgrade Boost ($600)</button>
+  <button onclick="toggleGarage()">Close</button>
 </div>
 
 <script>
-const player = document.getElementById("player");
-const game = document.getElementById("game");
-
-let data = JSON.parse(localStorage.getItem("carRush")) || {
-  cash: 0,
-  gems: 0,
-  rebirths: 0,
-  skin: "cyan",
-  animated: false,
-  leaderboard: [],
-  lastDaily: 0
+/* ===== SAVE ===== */
+let save = JSON.parse(localStorage.getItem("velocityDrive")) || {
+  money: 0,
+  best: 0,
+  speed: 10,
+  handling: 0.08,
+  boost: 1.8
 };
 
-let x = 135, speed = 4, score = 0, boosting=false;
-let mode = "road";
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
 
-function save() {
-  localStorage.setItem("carRush", JSON.stringify(data));
-}
+/* ===== UI ===== */
+const moneyEl = document.getElementById("money");
+const speedEl = document.getElementById("speed");
+const bestEl = document.getElementById("best");
 
-function updateUI() {
-  cash.textContent = data.cash;
-  gems.textContent = data.gems;
-  rebirths.textContent = data.rebirths;
-  scoreEl.textContent = score;
-  player.style.background = data.skin;
-  player.className = data.animated ? "animated" : "";
-}
-const cash = document.getElementById("cash");
-const gems = document.getElementById("gems");
-const rebirths = document.getElementById("rebirths");
-const scoreEl = document.getElementById("score");
-
-updateUI();
-
-document.addEventListener("keydown", e=>{
-  if(e.key==="ArrowLeft") left();
-  if(e.key==="ArrowRight") right();
-  if(e.key===" ") boost();
+/* ===== INPUT ===== */
+const keys = {};
+addEventListener("keydown", e => {
+  keys[e.key.toLowerCase()] = true;
+  if (e.key === "e") toggleGarage();
 });
+addEventListener("keyup", e => keys[e.key.toLowerCase()] = false);
 
-function left(){ if(x>0) x-=25; player.style.left=x+"px"; }
-function right(){ if(x<270) x+=25; player.style.left=x+"px"; }
+/* ===== PLAYER ===== */
+let player = {
+  x: 400,
+  y: 460,
+  vx: 0,
+  speed: 0
+};
 
-function boost(){
-  if(boosting) return;
-  boosting=true; speed+=4;
-  setTimeout(()=>{speed-=4; boosting=false},1000);
+/* ===== TRAFFIC ===== */
+let cars = [];
+function spawnCar() {
+  cars.push({
+    x: 200 + Math.random() * 400,
+    y: -100,
+    speed: 3 + Math.random() * 3
+  });
+}
+setInterval(spawnCar, 900);
+
+/* ===== GARAGE ===== */
+function toggleGarage() {
+  garage.style.display = garage.style.display ? "" : "block";
+}
+function upgrade(type, cost) {
+  if (save.money < cost) return;
+  save.money -= cost;
+  if (type === "speed") save.speed += 1;
+  if (type === "handling") save.handling += 0.01;
+  if (type === "boost") save.boost += 0.2;
+  localStorage.setItem("velocityDrive", JSON.stringify(save));
 }
 
-function spawnEnemy(){
-  if(mode==="obby") return;
-  const e=document.createElement("div");
-  e.className="enemy";
-  e.style.left=Math.floor(Math.random()*6)*50+"px";
-  game.appendChild(e);
-  let y=-80, drift=(Math.random()-0.5)*0.5;
+/* ===== GAME LOOP ===== */
+function loop() {
+  ctx.clearRect(0,0,800,600);
 
-  function move(){
-    y+=speed;
-    e.style.top=y+"px";
-    let ex=parseFloat(e.style.left);
-    e.style.left=(ex+drift)+"px";
+  // Road
+  ctx.fillStyle = "#222";
+  ctx.fillRect(150,0,500,600);
+  ctx.strokeStyle = "#fff";
+  ctx.setLineDash([20,20]);
+  ctx.lineWidth = 4;
+  ctx.beginPath();
+  ctx.moveTo(400,0);
+  ctx.lineTo(400,600);
+  ctx.stroke();
+  ctx.setLineDash([]);
 
-    if(collide(player,e)) death();
-    if(y>520){ e.remove(); score++; data.cash+=5+data.rebirths; }
-    else requestAnimationFrame(move);
-  }
-  move();
+  // Controls
+  if (keys["w"] || keys["arrowup"]) player.speed += 0.2;
+  if (keys["s"] || keys["arrowdown"]) player.speed -= 0.3;
+  player.speed *= 0.98;
+  player.speed = Math.max(0, Math.min(save.speed, player.speed));
+
+  if (keys["a"] || keys["arrowleft"]) player.vx -= save.handling;
+  if (keys["d"] || keys["arrowright"]) player.vx += save.handling;
+  player.vx *= 0.9;
+
+  player.x += player.vx * 60;
+  player.x = Math.max(170, Math.min(630, player.x));
+
+  // Player car
+  ctx.fillStyle = "#00f6ff";
+  ctx.shadowColor = "#00f6ff";
+  ctx.shadowBlur = 20;
+  ctx.fillRect(player.x-18, player.y-40, 36, 70);
+  ctx.shadowBlur = 0;
+
+  // Traffic
+  cars.forEach(c => {
+    c.y += c.speed + player.speed;
+    ctx.fillStyle = "#ff3355";
+    ctx.fillRect(c.x-18, c.y-40, 36, 70);
+
+    if (Math.abs(c.x-player.x)<30 && Math.abs(c.y-player.y)<50) crash();
+  });
+
+  cars = cars.filter(c => c.y < 700);
+
+  // Score & money
+  save.money += player.speed * 0.1;
+  save.best = Math.max(save.best, save.money);
+
+  moneyEl.textContent = Math.floor(save.money);
+  speedEl.textContent = player.speed.toFixed(1);
+  bestEl.textContent = Math.floor(save.best);
+
+  localStorage.setItem("velocityDrive", JSON.stringify(save));
+
+  requestAnimationFrame(loop);
 }
+loop();
 
-function spawnObstacle(){
-  const o=document.createElement("div");
-  o.className="obstacle";
-  o.style.left=Math.random()*250+"px";
-  o.style.top=Math.random()*400+"px";
-  game.appendChild(o);
-  setTimeout(()=>o.remove(),3000);
-}
-
-function collide(a,b){
-  const A=a.getBoundingClientRect(), B=b.getBoundingClientRect();
-  return A.left<B.right && A.right>B.left && A.top<B.bottom && A.bottom>B.top;
-}
-
-function death(){
-  data.leaderboard.push(score);
-  data.leaderboard.sort((a,b)=>b-a);
-  data.leaderboard=data.leaderboard.slice(0,5);
-  save();
-  showAd();
-}
-
-function showAd(){ ad.style.display="block"; }
-function closeAd(){ location.reload(); }
-
-setInterval(spawnEnemy,1100);
-setInterval(()=>{ if(mode==="obby") spawnObstacle(); },1500);
-
-function openShop(){ shop.style.display=shop.style.display?"":"block"; }
-function openLoot(){ loot.style.display=loot.style.display?"":"block"; }
-
-function buySkin(c,p){
-  if(data.cash>=p){ data.cash-=p; data.skin=c; save(); updateUI(); }
-}
-
-function buyAnimated(){
-  if(data.gems>=5){ data.gems-=5; data.animated=true; save(); updateUI(); }
-}
-
-function openBox(){
-  if(data.gems<3) return alert("Not enough gems");
-  data.gems-=3;
-  const r=Math.random();
-  if(r<0.4) data.cash+=200;
-  else if(r<0.7) data.gems+=2;
-  else data.animated=true;
-  save(); updateUI();
-}
-
-function rebirth(){
-  if(data.cash>=1000){
-    data.cash=0;
-    data.rebirths++;
-    data.gems+=2;
-    save(); updateUI();
-  }
-}
-
-function toggleMode(){
-  mode=mode==="road"?"obby":"road";
-  alert("Mode: "+mode);
-}
-
-function fullscreen(){
-  document.documentElement.requestFullscreen();
-}
-
-/* DAILY REWARD */
-if(Date.now()-data.lastDaily>86400000){
-  data.cash+=200;
-  data.gems+=1;
-  data.lastDaily=Date.now();
-  save();
-  alert("Daily reward claimed!");
+function crash() {
+  alert("CRASH! Distance Saved.");
+  location.reload();
 }
 </script>
 
